2012-11-06  Rick Byers  <rbyers@chromium.org>

        [chromium] Two touchadjustment tests are failing on mac
        https://bugs.webkit.org/show_bug.cgi?id=100833

        Reviewed by Antonio Gomes.

        Re-enable these two tests with appropriate tweaks.  Also avoid the platform dependant
        behavior by switching to the Ahem font.

        * platform/chromium/TestExpectations: Remove the failure expectations.
        * touchadjustment/html-label.html: Tweak one very borderline case to be closer to pass
        reliably.  Previously this passed only due to a bug in the test infrastructure fixed in r132929.
        * touchadjustment/nested-touch.html: Tweak borderline case to compensate for inclusion of
        the border in the measurement of the size of the div.

2012-11-06  Joshua Bell  <jsbell@chromium.org>

        [Chromium] Unreviewed gardening.

        * platform/chromium/TestExpectations:

2012-11-06  Joshua Bell  <jsbell@chromium.org>

        [Chromium] css3/line-break/line-break-strict-sound-marks.html image flaky on Mac 10.7
        https://bugs.webkit.org/show_bug.cgi?id=101368

        Unreviewed gardening.

        * platform/chromium/TestExpectations:

2012-11-05  Simon Fraser  <simon.fraser@apple.com>

        Fix RenderGeometryMap assertion when layers are scrolled during layout
        https://bugs.webkit.org/show_bug.cgi?id=101292

        Reviewed by Beth Dakin.

        Test that hit the assertion before the fix.

        * compositing/geometry/geometry-map-scroll-during-layout-assertion-expected.txt: Added.
        * compositing/geometry/geometry-map-scroll-during-layout-assertion.html: Added.

2012-11-06  Joshua Bell  <jsbell@chromium.org>

        [Chromium] Unreviewed gardening - more rebaselines following bug 101115.

        * platform/chromium-mac-lion/fast/block/lineboxcontain/block-glyphs-expected.png: Added.
        * platform/chromium-mac-lion/fast/block/lineboxcontain/block-glyphs-replaced-expected.png: Added.